fix: sticky element with admin bar on small screens (#238)

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -56,7 +56,9 @@ ol {
 		z-index: sass-utils.$zindex-fixed-element;
 
 		.admin-bar &:is(header) {
-			top: var(--wp-admin--admin-bar--height);
+			@include sass-utils.media(small) {
+				top: var(--wp-admin--admin-bar--height);
+			}
 		}
 	}
 
